--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MvpProject</string>
+    <string name="app_name_main">MvpProject</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!--main activity-->
